[josm_osmarenderer] Make plugin work under Windows with latest Java
git-svn-id: https://josm.openstreetmap.de/osmsvn/applications/editors/josm/plugins@29635 b9d5c4c9-76e1-0310-9c85-f3177eceb1e4